// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing TypingStats component in page SoloTyping Test 1: Not ended 1`] = `<span />`;

exports[`Testing TypingStats component in page SoloTyping Test 2: Ended 1`] = `
<div
  className="shadow p-3 gap-3 mt-3 box container-sm"
>
  <h3
    className="text"
  >
    Your Typing Stats:
  </h3>
  <p
    className="text"
  >
    Accuracy: 
    80
    % 
    <br />
    Speed: 
    64.4
     WPM
  </p>
  <button
    className="me-4 btn btn-outline-primary"
    disabled={false}
    onClick={undefined}
    type="button"
  >
    Try Again
  </button>
  <button
    className="me-4 btn btn-outline-primary"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    New Practice
  </button>
</div>
`;

exports[`Testing TypingStats component in page SoloTyping Test 3: Ended 1`] = `
<div
  className="shadow p-3 gap-3 mt-3 box container-sm"
>
  <h3
    className="text"
  >
    Your Typing Stats:
  </h3>
  <p
    className="text"
  >
    Accuracy: 
    92.3
    % 
    <br />
    Speed: 
    71
     WPM
  </p>
  <button
    className="me-4 btn btn-outline-primary"
    disabled={false}
    onClick={undefined}
    type="button"
  >
    Try Again
  </button>
  <button
    className="me-4 btn btn-outline-primary"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    New Practice
  </button>
</div>
`;
